--- a/src/components/PostCategory.astro
+++ b/src/components/PostCategory.astro
@@ -1,6 +1,7 @@
 ---
 import { themeConfig } from '~/.config'
 import { getPathFromCategory } from '~/utils'
+import { joinUrl } from '~/utils/tools'
 
 interface Props {
   category: string
@@ -9,7 +10,7 @@ interface Props {
 const { category } = Astro.props
 
 function getCategoryUrl(category: string) {
-  return `/categories/${getPathFromCategory(category, themeConfig.site.categoryMap)}`
+  return joinUrl(`/categories/${getPathFromCategory(category, themeConfig.site.categoryMap)}`)
 }
 ---
 
