--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -2,6 +2,7 @@
 import type { Post } from '~/types'
 import { formatDate } from '~/utils'
 import PostCategory from './PostCategory.astro'
+import { joinUrl } from '~/utils/tools'
 
 interface Props {
   post: Post
@@ -15,7 +16,7 @@ const categoryList = post.data.categories ?? []
 
 <header flex="~ col gap-2">
   <h1 class="post-title">
-    <a class="not-prose" href={`/posts/${post.id}/`}>{post.data.title}</a>
+    <a class="not-prose" href={joinUrl(`/posts/${post.id}/`)}>{post.data.title}</a>
   </h1>
   <div class="text-3.5">
     <span>{t(post.data.modDate ? 'updated_at' : 'posted_at')}</span>
