--- a/src/pages/categories/[...category].astro
+++ b/src/pages/categories/[...category].astro
@@ -3,6 +3,7 @@ import { themeConfig } from '~/.config'
 import LayoutDefault from '~/layouts/LayoutDefault.astro'
 import type { Post } from '~/types'
 import { formatDate, getCategories, getPathFromCategory } from '~/utils'
+import { joinUrl } from '~/utils/tools'
 
 export async function getStaticPaths() {
   const categoryMap = await getCategories()
@@ -20,7 +21,7 @@ const { posts, name } = Astro.props
 function getListItems(posts: Post[]) {
   const result = posts.map((post) => ({
     title: post.data.title,
-    href: `/posts/${post.id}/`,
+    href: joinUrl(`/posts/${post.id}/`),
     date: formatDate(post.data.pubDate),
   }))
   return result
