--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -2,6 +2,7 @@
 import { themeConfig } from '~/.config'
 import LayoutDefault from '~/layouts/LayoutDefault.astro'
 import { getCategories, getPathFromCategory } from '~/utils/index'
+import { joinUrl } from '~/utils/tools'
 
 const { translate: t } = Astro.locals
 const categoryMap = await getCategories()
@@ -11,7 +12,7 @@ const list = getListFromMap(categoryMap)
 function getListFromMap(map: typeof categoryMap) {
   return Array.from(map).map(([key, value]) => ({
     title: key,
-    href: `/categories/${getPathFromCategory(key, themeConfig.site.categoryMap)}`,
+    href: joinUrl(`/categories/${getPathFromCategory(key, themeConfig.site.categoryMap)}`),
     size: t('categories_count', value.length),
   }))
 }
